BFA-4172 : WiseIncome: Your Portfolio Goal second page - Disclaimer spacing issue Fixed

--- a/src/_all.scss
+++ b/src/_all.scss
@@ -2591,3 +2591,22 @@ select:-webkit-autofill:focus {
 .not-allowed {
   cursor: not-allowed;
 }
+
+// adding styles from _promotion.scss which were removed as part of code clean up
+.disclaimer{
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.1px;
+  color: $black-color;
+  display: flex;
+  padding-top: 20px;
+  font-family: $muli-regular;
+  text-align: left;
+  span{
+      &:first-child{                
+          letter-spacing: -0.1px;
+          padding-right: 5px;
+          font-family: $muli-bold;
+      }
+  }
+}
